force-app/main/default/objects/SBQQ__Quote__c/fields/Products_needing_Integrate_Language__c.field-meta.xml
<CustomField>
    <fullName>Products_needing_Integrate_Language__c</fullName>
    <label>Products needing Integrate Language</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Product_Type__c</field>
        <operation>equals</operation>
        <value>Software</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Item_Master_Product_Number__c</field>
        <operation>notEqual</operation>
        <value>PIN-00789,PIN-01024,PIN-01079,PIN-00299,PIN-00928,PIN-00260,PIN-00258,PIN-00266,PIN-00267,PIN-00261,PIN-00287,PIN-00269,PIN-00265,PIN-00288,PIN-01008,PIN-00790,PIN-00792,PIN-01069,PIN-01071,PIN-00682,PIN-00028,PIN-00296,PIN-00298,PIN-00019,PIN-00378</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Item_Master_Product_Number__c</field>
        <operation>notEqual</operation>
        <value>PIN-00026,PIN-00020,PIN-00025,PIN-00029,PIN-00018,PIN-00027,PIN-00030,PIN-01016,PIN-01075,PIN-01077,PIN-01073,PIN-01067,PIN-01068,PIN-01007,PIN-01070,PIN-01072,PIN-00813,PIN-00934,PIN-01065,PIN-01035,PIN-01034,PIN-01030,PIN-01028,PIN-01029,PIN-01074</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Item_Master_Product_Number__c</field>
        <operation>notEqual</operation>
        <value>PIN-01076,PIN-01078,PIN-00971,PIN-00970,PIN-00830,PIN-00989,PIN-00687,PIN-00723,PIN-00209,PIN-01018,PIN-01017, PIN-01544</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>