force-app/main/default/objects/SBQQ__Quote__c/fields/QLI_Update_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>QLI_Update_Date_Time__c</fullName>
    <label>QLI Update Date Time</label>
    <type>DateTime</type>
</CustomField>