force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Stage__c.field-meta.xml
<CustomField>
    <fullName>Quote_Stage__c</fullName>
    <description>Sales user should be able to move a Quote to the Pricing Proposal stage when ready to create a Pricing Proposal Document, built as per BIZ-45102
Updated for story BIZ-49730..</description>
    <label>Quote Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Configure Products</fullName>
                <default>true</default>
                <label>Configure Products</label>
            </value>
            <value>
                <fullName>Pricing Proposal</fullName>
            </value>
            <value>
                <fullName>Finalize OSA</fullName>
            </value>
            <value>
                <fullName>Pending Closure</fullName>
            </value>
            <value>
                <fullName>Contract Executed</fullName>
            </value>
            <value>
                <fullName>Closed-Lost</fullName>
            </value>
            <value>
                <fullName>Contracted</fullName>
                <isActive>false</isActive>
                <label>Contracted</label>
            </value>
            <value>
                <fullName>Draft</fullName>
                <isActive>false</isActive>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Forecast</fullName>
                <isActive>false</isActive>
                <label>Forecast</label>
            </value>
            <value>
                <fullName>OSA</fullName>
                <isActive>false</isActive>
                <label>OSA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>