force-app/main/default/objects/SBQQ__Quote__c/fields/Recurring_Amount_Change__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Amount_Change__c</fullName>
    <label>Rec Amount Change</label>
    <summarizedField>SBQQ__QuoteLine__c.Recurring_Amount_Change__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>