force-app/main/default/objects/SBQQ__Quote__c/fields/Recurring_Discount_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Discount_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of BIZ-50204</description>
    <label>Recurring Discount Checkbox</label>
    <type>Checkbox</type>
</CustomField>