force-app/main/default/objects/SBQQ__Quote__c/fields/Reference_approver__c.field-meta.xml
<CustomField>
    <fullName>Reference_approver__c</fullName>
    <formula>Segment_Lead__c</formula>
    <label>Reference approver</label>
    <type>Text</type>
</CustomField>