force-app/main/default/objects/SBQQ__Quote__c/fields/Regular_Signature__c.field-meta.xml
<CustomField>
    <fullName>Regular_Signature__c</fullName>
    <formula>IF(
(Include_Counter_Signature__c = TRUE)&amp;&amp; (Authorize_Signature__c = FALSE) ||
(Include_Counter_Signature__c = FALSE)&amp;&amp; (Authorize_Signature__c = TRUE),
FALSE,
TRUE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regular Signature</label>
    <type>Checkbox</type>
</CustomField>