force-app/main/default/objects/SBQQ__Quote__c/fields/Renewal_Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Quote_Type__c</fullName>
    <description>Created as part of BIZ-47716, to specify the renewal Quote type.
Auto Renewal - Created Automatically by the system when renewal quoted is selected on the contract.
Renewal-Changes - Created by cloning Auto-Renewal Quotes.
COntract consolidation - created while consolidating contracts</description>
    <label>Renewal Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto-Renewal</fullName>
            </value>
            <value>
                <fullName>Renewal-Changes</fullName>
            </value>
            <value>
                <fullName>Consolidated-Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>