force-app/main/default/objects/SBQQ__Quote__c/fields/Repstor__c.field-meta.xml
<CustomField>
    <fullName>Repstor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repstor</label>
    <type>Checkbox</type>
</CustomField>