force-app/main/default/objects/SBQQ__Quote__c/fields/Repstor_Retro__c.field-meta.xml
<CustomField>
    <fullName>Repstor_Retro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repstor Retro</label>
    <type>Checkbox</type>
</CustomField>