force-app/main/default/objects/SBQQ__Quote__c/fields/Retainer__c.field-meta.xml
<CustomField>
    <fullName>Retainer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Retainer checkbox.
Built according to US# BIZ-45113.</description>
    <label>Retainer</label>
    <type>Checkbox</type>
</CustomField>