force-app/main/default/objects/SBQQ__Quote__c/fields/Retainer_amount_calculated__c.field-meta.xml
<CustomField>
    <fullName>Retainer_amount_calculated__c</fullName>
    <formula>Retainer_percentage_editable__c * Services_Net_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retainer amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>