force-app/main/default/objects/SBQQ__Quote__c/fields/Retainer_percent__c.field-meta.xml
<CustomField>
    <fullName>Retainer_percent__c</fullName>
    <description>Created as a part of BIZ-46974
to calculate the Retainer%</description>
    <formula>Services_Net_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retainer%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>