force-app/main/default/objects/SBQQ__Quote__c/fields/Retainer_percentage_editable__c.field-meta.xml
<CustomField>
    <fullName>Retainer_percentage_editable__c</fullName>
    <label>Retainer %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>