force-app/main/default/objects/SBQQ__Quote__c/fields/ROR__c.field-meta.xml
<CustomField>
    <fullName>ROR__c</fullName>
    <label>ROR</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ROR without Success Criteria</fullName>
            </value>
            <value>
                <fullName>ROR with Success Criteria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>