force-app/main/default/objects/SBQQ__Quote__c/fields/ROR_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>ROR_Expiration_Date__c</fullName>
    <label>ROR Expiration Date</label>
    <type>Date</type>
</CustomField>