force-app/main/default/objects/SBQQ__Quote__c/fields/S_P__c.field-meta.xml
<CustomField>
    <fullName>S_P__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated as part of story BIZ-49907</description>
    <label>S&amp;P</label>
    <type>Checkbox</type>
</CustomField>