force-app/main/default/objects/SBQQ__Quote__c/fields/S_pfr__c.field-meta.xml
<CustomField>
    <fullName>S_pfr__c</fullName>
    <description>Created to make this field non editable BIZ-49895</description>
    <formula>S_P__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>S&amp;p</label>
    <type>Checkbox</type>
</CustomField>