force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__Status__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Status__c</fullName>
    <description>Status indicating where quote is in its lifecycle.</description>
    <inlineHelpText>Status indicating where quote is in its lifecycle.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Quote needs Review</fullName>
            </value>
            <value>
                <fullName>OSA Requested</fullName>
            </value>
            <value>
                <fullName>ContractsOps Processing</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Pending LegalOps</fullName>
            </value>
            <value>
                <fullName>Pending Payment Adj</fullName>
            </value>
            <value>
                <fullName>Pending Services Sales</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>AM Ops Engaged</fullName>
            </value>
            <value>
                <fullName>Engaging in Quote Issue</fullName>
            </value>
            <value>
                <fullName>Contract Ops Engaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>