force-app/main/default/objects/SBQQ__Quote__c/fields/Segment_Lead__c.field-meta.xml
<CustomField>
    <fullName>Segment_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Segment Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes4</relationshipName>
    <type>Lookup</type>
</CustomField>