force-app/main/default/objects/SBQQ__Quote__c/fields/SegmentIndex_Max__c.field-meta.xml
<CustomField>
    <fullName>SegmentIndex_Max__c</fullName>
    <label>SegmentIndex Max</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__SegmentIndex__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>