force-app/main/default/objects/SBQQ__Quote__c/fields/Service_Only__c.field-meta.xml
<CustomField>
    <fullName>Service_Only__c</fullName>
    <description>Created as a part of storyBIZ-45146</description>
    <formula>Software_Net_Total__c = 0 &amp;&amp; Services_Net_Total__c &gt;0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Only</label>
    <type>Checkbox</type>
</CustomField>