force-app/main/default/objects/SBQQ__Quote__c/fields/Services_Discount_Percentag_Prime__c.field-meta.xml
<CustomField>
    <fullName>Services_Discount_Percentag_Prime__c</fullName>
    <description>Field is created as a part of story: BIZ-49977 to calculate a product as prime discount percentage</description>
    <formula>IF(
Sixth_Year_Software_Net_Total__c + Fourth_Year_Software_Net_Total__c = 0,
0,
Fourth_Year_Software_Net_Total__c/(Sixth_Year_Software_Net_Total__c + Fourth_Year_Software_Net_Total__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Services Discount Percentage(Prime)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>