force-app/main/default/objects/SBQQ__Quote__c/fields/Services_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Services_Discount_Percentage__c</fullName>
    <description>Services Discount %, used to populate Quote Term</description>
    <formula>IF(
Services_Net_Total__c + Services_Credit_Amount__c = 0,
0,
Services_Credit_Amount__c/(Services_Net_Total__c + Services_Credit_Amount__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Services Discount Percentage(Non Prime)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>