force-app/main/default/objects/SBQQ__Quote__c/fields/Services_Effective_Date_Custom_Term__c.field-meta.xml
<CustomField>
    <fullName>Services_Effective_Date_Custom_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BIZ-43799</description>
    <label>Services Effective Date Custom Term</label>
    <type>Checkbox</type>
</CustomField>