force-app/main/default/objects/SBQQ__Quote__c/fields/Services_hours__c.field-meta.xml
<CustomField>
    <fullName>Services_hours__c</fullName>
    <description>Updated label BIZ-47803
RR: Updated filters for service approvals</description>
    <label>Services Hours</label>
    <summarizedField>SBQQ__QuoteLine__c.Services_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Product_Type__c</field>
        <operation>equals</operation>
        <value>Services</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Is_Prime__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>