force-app/main/default/objects/SBQQ__Quote__c/fields/Services_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Services_Net_Total__c</fullName>
    <description>Updated for story BIZ- 49977
to calculate the total only for non prime products</description>
    <label>Services Net Total</label>
    <summarizedField>SBQQ__QuoteLine__c.NetTotal_No_Currency__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Product_Type__c</field>
        <operation>equals</operation>
        <value>Services, Services Discount, Training</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Is_Prime__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>