force-app/main/default/objects/SBQQ__Quote__c/fields/Services_Products__c.field-meta.xml
<CustomField>
    <fullName>Services_Products__c</fullName>
    <label>Services Products</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Product_Type__c</field>
        <operation>equals</operation>
        <value>Services, Services Discount, Training</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>