force-app/main/default/objects/SBQQ__Quote__c/fields/Services_Segment_Lead__c.field-meta.xml
<CustomField>
    <fullName>Services_Segment_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Services Segment Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes6</relationshipName>
    <type>Lookup</type>
</CustomField>