force-app/main/default/objects/SBQQ__Quote__c/fields/SFA_Cap_Time_Horizon__c.field-meta.xml
<CustomField>
    <fullName>SFA_Cap_Time_Horizon__c</fullName>
    <label>SFA Cap Time Horizon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st renewal only</fullName>
            </value>
            <value>
                <fullName>Thru 2nd renewal</fullName>
            </value>
            <value>
                <fullName>Thru 3rd Renewal</fullName>
            </value>
            <value>
                <fullName>Perpetual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>