force-app/main/default/objects/SBQQ__Quote__c/fields/SFA_Notes__c.field-meta.xml
<CustomField>
    <fullName>SFA_Notes__c</fullName>
    <description>BIZ-49393</description>
    <label>SFA Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>